Polish navbar and enhance Experience section alignment
🎨 Navbar Enhancements:
- Added professional subtitle 'Data Engineer & ML Dev' under logo
- Added icons to all navigation links for better visual hierarchy
- Implemented smooth hover animations (translateY and scale effects)
- Added ARIA labels for accessibility
- Responsive button text (hides on mobile)
- Enhanced logo styling with flex column layout

💼 Experience Section Improvements:
- Increased line-height from 1.5 to 1.7 for better readability
- Improved gap spacing between icons and text (0.5rem → 0.75rem)
- Added text-align: justify for professional paragraph formatting
- Enhanced bold text visibility with primary color and font-weight: 600
- Fixed icon vertical alignment with margin-top adjustment
- Better spacing between responsibility items (0.5rem → 0.75rem)
- Added white-space: nowrap for bold technology terms

✨ Visual Polish:
- Smooth transitions on all interactive elements
- Consistent spacing throughout
- Better alignment of checkmark icons with multi-line text
- Professional typography hierarchy
- Enhanced color contrast for bold elements

--- a/index.html
+++ b/index.html
@@ -40,30 +40,31 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="#home" class="logo">
+                <a href="#home" class="logo" aria-label="Alok Kumar Home">
                     <span class="logo-text">Alok</span><span class="logo-accent">Kumar</span>
+                    <span class="logo-subtitle" style="display: block; font-size: 0.5rem; font-weight: 400; color: var(--text-tertiary); margin-top: -0.25rem;">Data Engineer & ML Dev</span>
                 </a>
                 
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="#home" class="nav-link active">Home</a></li>
-                    <li><a href="#about" class="nav-link">About</a></li>
-                    <li><a href="#skills" class="nav-link">Skills</a></li>
-                    <li><a href="#projects" class="nav-link">Projects</a></li>
-                    <li><a href="#experience" class="nav-link">Experience</a></li>
-                    <li><a href="#education" class="nav-link">Education</a></li>
-                    <li><a href="#github-stats" class="nav-link">Stats</a></li>
-                    <li><a href="#coding-profiles" class="nav-link">Profiles</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="#home" class="nav-link active" aria-label="Home"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="#about" class="nav-link" aria-label="About"><i class="fas fa-user"></i> About</a></li>
+                    <li><a href="#skills" class="nav-link" aria-label="Skills"><i class="fas fa-code"></i> Skills</a></li>
+                    <li><a href="#projects" class="nav-link" aria-label="Projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
+                    <li><a href="#experience" class="nav-link" aria-label="Experience"><i class="fas fa-briefcase"></i> Experience</a></li>
+                    <li><a href="#education" class="nav-link" aria-label="Education"><i class="fas fa-graduation-cap"></i> Education</a></li>
+                    <li><a href="#github-stats" class="nav-link" aria-label="GitHub Stats"><i class="fas fa-chart-bar"></i> Stats</a></li>
+                    <li><a href="#coding-profiles" class="nav-link" aria-label="Coding Profiles"><i class="fas fa-trophy"></i> Profiles</a></li>
+                    <li><a href="#contact" class="nav-link" aria-label="Contact"><i class="fas fa-envelope"></i> Contact</a></li>
                 </ul>
                 
                 <div class="nav-actions">
-                    <a href="assets/resume.pdf" class="btn btn-outline" download>
-                        <i class="fas fa-download"></i> Resume
+                    <a href="assets/resume.pdf" class="btn btn-outline" download aria-label="Download Resume">
+                        <i class="fas fa-download"></i> <span class="btn-text-desktop">Resume</span>
                     </a>
-                    <button class="theme-toggle" id="themeToggle">
+                    <button class="theme-toggle" id="themeToggle" aria-label="Toggle Dark Mode">
                         <i class="fas fa-moon"></i>
                     </button>
-                    <button class="hamburger" id="hamburger">
+                    <button class="hamburger" id="hamburger" aria-label="Toggle Menu">
                         <span></span>
                         <span></span>
                         <span></span>
