Fix text spacing and apply comprehensive polish styling
🔧 Experience Section Fixes:
- Wrapped all text content in <span> tags for proper spacing control
- Removed unwanted spaces around bold <strong> tags
- Fixed text alignment with flex layout (icon + span wrapper)
- Added text-align: justify with hyphens for professional paragraph flow
- Applied gradient color to bold technology terms
- Perfect alignment of checkmark icons with multi-line text

🎨 Hero Section Enhancements:
- Added polished stat badges with hover effects
- Enhanced badge styling with subtle backgrounds and borders
- Improved tagline typography with letter-spacing
- Professional hover animations with translateY and shadow effects

✨ Section Headers Polish:
- Added decorative underline bars (4px gradient line)
- Enhanced section labels with background pills
- Increased title size (2.5rem → 2.75rem) with tighter letter-spacing
- Added visual hierarchy with refined spacing

💎 Project Cards Refinement:
- Enhanced hover effects (translateY -8px → -10px)
- Added subtle border on hover with primary color
- Improved shadow depth with custom RGBA shadows
- Smooth border color transitions

🎯 Skill Cards Enhancement:
- Added card hover states with subtle background
- Enhanced icon animations (rotate 5deg + scale 1.05)
- Added gradient border glow effect on hover
- Improved shadow depth and movement (translateY -8px)

🔘 Button Polish:
- Increased padding (0.875rem → 1rem) for better presence
- Enhanced font-weight (500 → 600) for stronger CTA
- Added default box-shadow for depth
- Improved hover shadows with increased RGBA opacity
- Smoother animation transitions (0.4s for fill effect)

📐 Typography Improvements:
- Better letter-spacing throughout
- Improved line-heights for readability
- Enhanced text rendering with hyphens: auto
- Professional gradient text effects on strong elements

All spacing issues resolved with proper HTML structure! ✅

--- a/index.html
+++ b/index.html
@@ -843,19 +843,19 @@
                         <ul class="timeline-responsibilities">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Architected and managed enterprise-scale relational databases using <strong>SQL, MySQL, and Snowflake</strong>, achieving <strong>30% performance improvement</strong> through strategic indexing, query optimization, and execution plan analysis
+                                <span></span>Architected and managed enterprise-scale relational databases using <strong>SQL, MySQL, and Snowflake</strong>, achieving <strong>30% performance improvement</strong> through strategic indexing, query optimization, and execution plan analysis</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Engineered scalable cloud infrastructure with <strong>AWS RDS, S3, and Redshift</strong>, designing efficient data warehouse architectures that enable real-time analytics and historical data analysis for business intelligence
+                                <span>Engineered scalable cloud infrastructure with <strong>AWS RDS, S3, and Redshift</strong>, designing efficient data warehouse architectures that enable real-time analytics and historical data analysis for business intelligence</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Built and automated robust <strong>ETL workflows</strong> enabling seamless data transformation and integration from multiple heterogeneous sources into unified cloud-based data systems
+                                <span>Built and automated robust <strong>ETL workflows</strong> enabling seamless data transformation and integration from multiple heterogeneous sources into unified cloud-based data systems</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Led database optimization initiatives, reducing query response times and improving overall system throughput through advanced indexing strategies and intelligent query refactoring
+                                <span>Led database optimization initiatives, reducing query response times and improving overall system throughput through advanced indexing strategies and intelligent query refactoring</span>
                             </li>
                         </ul>
                         <div class="timeline-tags">
@@ -889,19 +889,19 @@
                         <ul class="timeline-responsibilities">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Collaborated on enterprise database development using <strong>SQL, MySQL, and Snowflake</strong>, focusing on data integrity, accuracy, and advanced query optimization techniques
+                                <span>Collaborated on enterprise database development using <strong>SQL, MySQL, and Snowflake</strong>, focusing on data integrity, accuracy, and advanced query optimization techniques</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Contributed to cloud infrastructure setup with <strong>AWS RDS, S3, and Redshift</strong>, participating in architecture design and implementation
+                                <span>Contributed to cloud infrastructure setup with <strong>AWS RDS, S3, and Redshift</strong>, participating in architecture design and implementation</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Assisted in data warehouse schema modeling for business intelligence and analytics, applying dimensional modeling best practices
+                                <span>Assisted in data warehouse schema modeling for business intelligence and analytics, applying dimensional modeling best practices</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Participated in designing and monitoring <strong>ETL processes</strong> to automate data ingestion, transformation, and quality assurance workflows
+                                <span>Participated in designing and monitoring <strong>ETL processes</strong> to automate data ingestion, transformation, and quality assurance workflows</span>
                             </li>
                         </ul>
                         <div class="timeline-tags">
@@ -934,19 +934,19 @@
                         <ul class="timeline-responsibilities">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Developed and optimized production-grade machine learning models using <strong>Python, Scikit-learn, and TensorFlow</strong> for predictive analytics, classification, and regression tasks
+                                <span>Developed and optimized production-grade machine learning models using <strong>Python, Scikit-learn, and TensorFlow</strong> for predictive analytics, classification, and regression tasks</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Deployed ML models via <strong>RESTful APIs on AWS (EC2, S3, Lambda)</strong>, enabling scalable, high-performance real-time inference for enterprise applications
+                                <span>Deployed ML models via <strong>RESTful APIs on AWS (EC2, S3, Lambda)</strong>, enabling scalable, high-performance real-time inference for enterprise applications</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Engineered comprehensive end-to-end ML pipelines encompassing data preprocessing, feature engineering, model training, evaluation, and continuous performance monitoring
+                                <span>Engineered comprehensive end-to-end ML pipelines encompassing data preprocessing, feature engineering, model training, evaluation, and continuous performance monitoring</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                Integrated advanced monitoring and alerting systems to detect model drift, ensuring sustained accuracy and reliability across diverse production datasets
+                                <span>Integrated advanced monitoring and alerting systems to detect model drift, ensuring sustained accuracy and reliability across diverse production datasets</span>
                             </li>
                         </ul>
                         <div class="timeline-tags">
