Fix Experience section text alignment - remove extra empty span tag
🐛 Bug Fix:
- Removed extra empty <span></span> tag in first responsibility item
- This was causing the text to break incorrectly with spaces
- Text now flows properly without gaps

✅ Result:
- Perfect text alignment in Program Analyst Trainee section
- No more spaces between 'using' and 'SQL, MySQL, and Snowflake'
- No more spaces between commas and 'achieving'
- Clean, professional text flow throughout

--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
                         <ul class="timeline-responsibilities">
                             <li>
                                 <i class="fas fa-check-circle"></i>
-                                <span></span>Architected and managed enterprise-scale relational databases using <strong>SQL, MySQL, and Snowflake</strong>, achieving <strong>30% performance improvement</strong> through strategic indexing, query optimization, and execution plan analysis</span>
+                                <span>Architected and managed enterprise-scale relational databases using <strong>SQL, MySQL, and Snowflake</strong>, achieving <strong>30% performance improvement</strong> through strategic indexing, query optimization, and execution plan analysis</span>
                             </li>
                             <li>
                                 <i class="fas fa-check-circle"></i>
