Fix all project images and update live URLs
- Renamed portfolio.jpg to portfolio.png
- Renamed the-god-ai.jpg to the-god-ai.png
- Renamed faceattendai.jpg to faceattendai.png
- Renamed liver-cirrhosis.jpg to liver-cirrhosis.png
- All images were PNG format but had .jpg extension
- Removed onerror handlers that were hiding images
- Updated portfolio live URL to https://imalokkumarsingh.netlify.app/
- Updated liver cirrhosis live URL to https://ai-doctor-1-c1z5.onrender.com/predict

--- a/index.html
+++ b/index.html
@@ -657,9 +657,9 @@
                 <!-- Project 1: Liver Cirrhosis Detection -->
                 <div class="project-card" data-category="python" data-aos="fade-up" data-aos-delay="100">
                     <div class="project-image">
-                        <img src="images/liver-cirrhosis.jpg" alt="Liver Cirrhosis Detection ML Model" loading="lazy" onerror="this.style.display='none'">
+                        <img src="images/liver-cirrhosis.png" alt="Liver Cirrhosis Detection ML Model" loading="lazy">
                         <div class="project-overlay">
-                            <a href="https://github.com/aloksingh1818/Disease-Prediction" class="project-link" target="_blank">
+                            <a href="https://ai-doctor-1-c1z5.onrender.com/predict" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                             <a href="https://github.com/aloksingh1818/Disease-Prediction" class="project-link" target="_blank">
@@ -721,7 +721,7 @@
                 <!-- Project 3: FaceAttendAI -->
                 <div class="project-card" data-category="ml" data-aos="fade-up" data-aos-delay="300">
                     <div class="project-image">
-                        <img src="images/faceattendai.jpg" alt="FaceAttendAI - Face Recognition Attendance System" loading="lazy" onerror="this.style.display='none'">
+                        <img src="images/faceattendai.png" alt="FaceAttendAI - Face Recognition Attendance System" loading="lazy">
                         <div class="project-overlay">
                             <a href="https://github.com/aloksingh1818/face-detection-system" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
@@ -754,7 +754,7 @@
                 <!-- Project 4: The God AI -->
                 <div class="project-card" data-category="web" data-aos="fade-up" data-aos-delay="400">
                     <div class="project-image">
-                        <img src="images/the-god-ai.jpg" alt="The God AI - Interview Co-Pilot" loading="lazy" onerror="this.style.display='none'">
+                        <img src="images/the-god-ai.png" alt="The God AI - Interview Co-Pilot" loading="lazy">
                         <div class="project-overlay">
                             <a href="https://thegodai.netlify.app/" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
@@ -788,9 +788,9 @@
                 <!-- Project 5: Portfolio Website -->
                 <div class="project-card" data-category="web" data-aos="fade-up" data-aos-delay="500">
                     <div class="project-image">
-                        <img src="images/portfolio.jpg" alt="Personal Portfolio Website" loading="lazy" onerror="this.style.display='none'">
+                        <img src="images/portfolio.png" alt="Personal Portfolio Website" loading="lazy">
                         <div class="project-overlay">
-                            <a href="https://aloksingh1818.github.io/My-Portfolio/" class="project-link" target="_blank">
+                            <a href="https://imalokkumarsingh.netlify.app/" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                             <a href="https://github.com/aloksingh1818/My-Portfolio" class="project-link" target="_blank">
