Fix shopping-karo image - rename to .png and remove onerror handler

--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                 <!-- Project 2: ShoppingKaro -->
                 <div class="project-card" data-category="web" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-image">
-                        <img src="images/shopping-karo.jpg" alt="ShoppingKaro E-commerce Web Application" loading="lazy" onerror="this.style.display='none'">
+                        <img src="images/shopping-karo.png" alt="ShoppingKaro E-commerce Web Application" loading="lazy">
                         <div class="project-overlay">
                             <a href="https://github.com/aloksingh1818/ShoppingKaro" class="project-link" target="_blank">
                                 <i class="fas fa-external-link-alt"></i>
